
	* configure.ac, freeipmi.spec.in: Update appropriately for new files.

	* common/src/toolcommon/tool-sdr-cache-common.h,
	common/src/toolcommon/tool-sdr-cache-common.c
	(sdr_cache_get_sensor_capabilities): New function.

	* ipmi-sensors/src/ipmi-sensors-very-verbose-display.c
	(_output_very_verbose_hysteresis): Before issuing hysteresis
	command, check if hysteresis can even be read.
	
2008-07-09 Albert Chu <chu11@llnl.gov>
	
	* libfreeipmi/include/freeipmi/cmds/ipmi-sensor-cmds.h,
	libfreeipmi/src/cmds/ipmi-sensor-cmds.c,
	libfreeipmi/include/api/ipmi-sensor-cmds-api.h,
	libfreeipmi/src/api/ipmi-sensor-cmds-api.c: Support Get/Set event
	enable commands.

	* Globally rename "sensor_state" to "sensor_event_bitmask" for
	consistency to get/set enable commands and for clarification from
	ipmimonitoring's "sensor_state".

	* ipmi-sensors/: Re-order hysteresis output with positive first,
	for consistency to IPMI spec.  Gather hysteresis values from IPMI
	command when available.

	* common/src/toolcommon/tool-sdr-cache-common.h,
	common/src/toolcommon/tool-sdr-cache-common.c
	(sdr_cache_get_hysteresis_real): Removed function.

	* common/src/toolcommon/tool-sdr-cache-common.h,
        common/src/toolcommon/tool-sdr-cache-common.c
        (sdr_cache_get_hysteresis_integeer): Renamed to sdr_cache_get_hysteresis.
	
2008-07-08 Albert Chu <chu11@llnl.gov>

	* ipmi-sel/, bmc-device/: Move --get-time and --set-time from
	ipmi-sel to --get-sel-time and --set-sel-time in bmc-device.
	
	* libfreeipmi/include/freeipmi/api/ipmi-sdr-repository-cmds-api.h,
	libfreeipmi/include/freeipmi/cmds/ipmi-sdr-repository-cmds.h,
	libfreeipmi/src/api/ipmi-sdr-repository-cmds-api.c,
	libfreeipmi/src/cmds/ipmi-sdr-repository-cmds.c: Support get/set
	SDR repository time commands.

	* bmc-device/: Support --get-sdr-repository-time and
	--set-sdr-repository-time.

	* libfreeipmi/include/freeipmi/cmds/ipmi-sel-cmds.h,
	libfreeipmi/src/cmds/ipmi-sel-cmds.c,
	libfreeipmi/include/api/ipmi-sel-cmds-api.h,